# Rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  Rasterizer.sln
LMath/: CMakeLists.txt
LMath/src/: CMakeLists.txt
LMath/src/Private/: LMath.cpp  Matrix4.cpp  Vector.cpp
LMath/src/Public/: LMath.h  Matrix4.h  Vector.h
Rasterizer/: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Config.h  EntryPoint.cpp  Framebuffer.h  Rasterizer.vcxproj  Rasterizer.vcxproj.filters  Sprite.h  Utils.h  Window.cpp  Window.h
Rasterizer/src/: CMakeLists.txt  EntryPoint.cpp
Rasterizer/src/Private/: Canvas.cpp  Color.cpp  FrameBuffer.cpp  Mesh.cpp  MeshRenderer.cpp  Object.cpp  RenderMesh.cpp  Transform.cpp  Window.cpp
Rasterizer/src/Public/: Canvas.h  Color.h  Config.h  FrameBuffer.h  Mesh.h  MeshRenderer.h  Object.h  RenderMesh.h  Transform.h  Utils.h  Window.h
TestSuite/: CMakeLists.txt
TestSuite/tests/: CMakeLists.txt  sanity_check.cpp  test_framebuffer.cpp
TestSuite/tests/LMath_test/: lmath_test.cpp  matrix_test.cpp  vector_test.cpp
TestSuite/tests/Rasterizer_test/: test_color.cpp  test_framebuffer.cpp  test_transform.cpp
TestSuite/tests/Utils/: Format.cpp  Format.h
Tests/: Test1.cpp  Tests.vcxproj  Tests.vcxproj.filters
cmake/: FindSDL2.cmake
src/: CMakeLists.txt
src/Private/: Canvas.cpp  EntryPoint.cpp  Framebuffer.cpp  Window.cpp
src/Public/: Color.h  Config.h  Time.h  Window.h
