cmake_minimum_required(VERSION 2.6)
project(ROOT)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_} -std=gnu++11 -g -Wall -Wextra -pedantic")
#if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
#    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -g -Wall -Wextra -pedantic)
#    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O2")
#elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
#    if (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
#        string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
#    else()
#        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
#    endif()
#endif()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${RasterizerConfig_SOURCE_DIR}/cmake")
set(BIN_DIR ${RasterizerConfig_SOURCE_DIR}/bin)

add_subdirectory(thirdparty)
add_subdirectory(Rasterizer)
add_subdirectory(LMath)
add_subdirectory(TestSuite)
